<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.OTPVerification">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/imageView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:src="@drawable/bdp_logo" />

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:text="@string/otp_page"
          android:textAppearance="@style/appbar" />
    </LinearLayout>

    <com.chaos.view.PinView
        android:id="@+id/otpCode"
        app:itemCount="4"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:itemBackground="@android:color/transparent"
        android:layout_gravity="center"
        android:textAppearance="@style/textfields"
        android:inputType="number"
        android:cursorVisible="true"
        app:hideLineWhenFilled="false"
        app:itemRadius="5dp"
        style="@style/PinWidget.PinView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </com.chaos.view.PinView>

    <Button
        android:id="@+id/btnVerifyOtp"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="105dp"
        android:drawableEnd="@drawable/ic_login"
        android:textAppearance="@style/buttons"
        android:text="@string/otp_button" />

    <TextView
        android:id="@+id/dontHaveAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="10dp"
        android:autoLink="all"
        android:text="@string/no_otp_received" />
  </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>